# CrossPlatformBuild

./: README.md
Utility/src/: CMakeLists.txt  TestLibs.cpp
Utility/src/Utils/include/: EMVUtils.h
UtilityClion/: .cproject  .project
UtilityClion/src/APDU/: CMakeLists.txt
UtilityClion/src/APDU/include/: CAPDU.h
UtilityClion/src/APDU/source/: CAPDU.cpp
UtilityClion/src/Utils/: CMakeLists.txt
UtilityClion/src/Utils/source/: EMVUtils.cpp
